last cjhanges for v 1.1